code-example/simple-service/deployment/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-service
  namespace: simple-service
  labels:
    app: simple-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-service
  template:
    metadata:
      labels:
        app: simple-service
    spec:
      containers:
        - name: simple-service
          image: simple-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
            - containerPort: 8889
---
kind: Service
apiVersion: v1
metadata:
  name: simple-service
  namespace: simple-service
  annotations:
    prometheus: 'true'
spec:
  selector:
    app: simple-service
  ports:
    - name: application
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: admin
      protocol: TCP
      port: 8889
      targetPort: 8889
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: simple-service-route
  namespace: simple-service
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/simple-service/ping`)
      middlewares:
        - name: simple-service-strip-prefix
          namespace: simple-service
      services:
        - kind: Service
          name: simple-service
          namespace: simple-service
          passHostHeader: true
          port: 8888
          strategy: RoundRobin
          nativeLB: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: simple-service-strip-prefix
  namespace: simple-service
spec:
  stripPrefix:
    prefixes:
      - /simple-service
